Change import filepaths

--- a/miri3d/drizzle/driztest.ipynb
+++ b/miri3d/drizzle/driztest.ipynb
@@ -19,8 +19,8 @@
     "import numpy as np\n",
     "import shapely.geometry as sg\n",
     "import descartes as dc\n",
-    "import miricoord.miricoord.mrs.mrs_pipetools as mpt\n",
-    "from miricoord.miricoord.tel import tel_tools as tt\n",
+    "import miricoord.mrs.mrs_pipetools as mpt\n",
+    "from miricoord.tel import tel_tools as tt\n",
     "from astropy.io import fits\n",
     "import pdb\n",
     "import sys\n",
@@ -667,7 +667,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
