--- a/miri3d/modshep/ImageTest.ipynb
+++ b/miri3d/modshep/ImageTest.ipynb
@@ -18,7 +18,7 @@
     "import matplotlib.pyplot as plt\n",
     "from matplotlib import colors\n",
     "from astropy.io import fits\n",
-    "#import miri3d.miri3d.modshep.modshep as ms"
+    "#import miri3d.modshep.modshep as ms"
    ]
   },
   {
